add dev version of all /user
